--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -74,3 +74,9 @@
   color: #f2be3a;
   font-size: 18px;
 }
+@media only screen and (max-width: 1500px) and (min-width: 400px) {
+  .green-part-contact {
+    width: 300px;
+    height: 300px;
+  }
+}
