--- a/css/meni.css
+++ b/css/meni.css
@@ -41,7 +41,7 @@ nav a {
   text-decoration: none;
   font-family: Dual300;
   color: #003537;
-  font-size: 18px;
+  font-size: 20px;
 }
 .navigation {
   display: flex;
@@ -156,15 +156,15 @@ nav a {
 .first-colum-food-image {
   width: 267px;
   height: 317px;
-  background: url(../img/Mask_Group_30.png);
+  background: url(../img/Mask_Group_301.png);
   position: relative;
   margin-right: 350px;
-  margin-left: 20px;
+  margin-left: 30px;
 }
 .second-colum-food-image {
   width: 267px;
   height: 317px;
-  background: url(../img/Mask_Group_31.png);
+  background: url(../img/Mask_Group_311.png);
   position: relative;
 }
 .description-food {
@@ -236,4 +236,83 @@ nav a {
 .food-representation {
   display: flex;
   flex-direction: column;
+}
+
+@media only screen and (max-width: 1500px) and (min-width: 400px) {
+  .begining-image-holder {
+    width: 550px;
+    height: 400px;
+    background-position-y: -80px;
+  }
+  .main-meni-header {
+    font-size: 40px;
+  }
+  .header-line {
+    height: 0.5px;
+    width: 200px;
+  }
+  .meni-under-header {
+    font-size: 20px;
+    width: 450px;
+  }
+  .green-part {
+    height: 600px;
+  }
+  nav a {
+    font-size: 16px;
+  }
+  .menu-left-bar a {
+    font-size: 20px;
+  }
+  .green-part {
+    width: 300px;
+  }
+  .menu-left-bar {
+    width: 300px;
+    height: 500px;
+  }
+  .left-green-part {
+    width: 300px;
+  }
+  .food-section-header {
+    font-size: 30px;
+  }
+  .line-food-section {
+    height: 0.5px;
+  }
+  .first-colum-food-image {
+    width: 200px;
+    height: 237px;
+    margin-right: 280px;
+    background: url(../img/Mask_Group_30.png);
+  }
+  .description-food {
+    top: 120px;
+    left: 60px;
+    width: 320px;
+    height: 80px;
+  }
+  .food-name {
+    font-size: 20px;
+  }
+  .ingredients {
+    font-size: 16px;
+  }
+  .price {
+    font-size: 16px;
+  }
+  .description-food-2 {
+    top: 120px;
+    left: 60px;
+    width: 320px;
+    height: 80px;
+  }
+  .second-colum-food-image {
+    width: 200px;
+    height: 237px;
+    background: url(../img/Mask_Group_31.png);
+  }
+  .footer-nontransparent {
+    height: 80px;
+  }
 }
