--- a/css/meni.css
+++ b/css/meni.css
@@ -4,6 +4,8 @@
 }
 .left-part-meni {
   flex: 1 1 0;
+  display: flex;
+  flex-direction: row;
 }
 .green-part {
   width: 340px;
@@ -13,10 +15,9 @@
 }
 .logo-blue {
   width: 120px;
-  position: absolute;
-  top: 3%;
-  left: 440px;
+  margin: 20px 0px 0px 30px;
 }
+
 .begining-image-holder {
   width: 640px;
   height: 496px;
