--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -83,6 +83,9 @@
   color: #f2be3a;
   font-size: 18px;
 }
+.contact-menu {
+  width: 400px;
+}
 @media only screen and (max-width: 1500px) and (min-width: 400px) {
   .green-part-contact {
     width: 300px;
