--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,9 @@ nav a {
 .logo-main-mobile {
   display: none;
 }
+.fourth-part-mobile-holder {
+  display: none;
+}
 /*.main-header{
     font-size: 3em;
 }
@@ -492,5 +495,53 @@ nav a {
   }
   .right-section-menu {
     background-image: none;
+  }
+  .fourth-part-mobile {
+    display: flex;
+    flex-direction: row;
+  }
+  .greed-1-mobile {
+    background-image: url(../img/Mask_Group_63.png);
+    height: 188px;
+    flex: 1 1 0;
+  }
+  .greed-2-mobile {
+    background-image: url(../img/Mask_Group_58.png);
+    height: 188px;
+    flex: 1 1 0;
+  }
+  .fourth-part-mobile-holder {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  .fourth-part {
+    display: none;
+  }
+  .transparent-box-mobile {
+    background-color: #003537;
+    opacity: 80%;
+    width: 300px;
+    height: 212px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+  }
+  .test {
+    position: absolute;
+    height: 376px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 375px;
+  }
+  .gallery-header {
+    font-size: 40px;
+  }
+  .description-3 {
+    font-size: 20px;
+    margin-top: 20px;
   }
 }
