--- a/css/gallery.css
+++ b/css/gallery.css
@@ -124,3 +124,63 @@
     height: 0.5px;
   }
 }
+@media only screen and (max-width: 835px) {
+  .overlay {
+    display: flex;
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #003537;
+    opacity: 90%;
+    overflow-y: hidden;
+    transition: 0.5s;
+  }
+
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    font-family: Dual300;
+    color: #f2be3a;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .overlay a:hover,
+  .overlay a:focus {
+    color: #f1f1f1;
+  }
+
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  .nav-bar {
+    display: flex;
+    position: absolute;
+    top: 1%;
+    left: 90%;
+    color: #003537;
+  }
+  .begining-image-holder-gallery {
+    width: 306px;
+    height: 209;
+    background: url(../img/Mask_Group_6888.png);
+    position: absolute;
+    top: 117px;
+    left: 33px;
+  }
+}
