--- a/css/meni.css
+++ b/css/meni.css
@@ -241,6 +241,9 @@ nav a {
 .menu-left-bar-mobile {
   display: none;
 }
+.left-green-part-1 {
+  display: none;
+}
 @media only screen and (max-width: 1500px) and (min-width: 400px) {
   .begining-image-holder {
     width: 550px;
@@ -325,6 +328,13 @@ nav a {
   }
   .green-part {
     width: 65px;
+    height: 400px;
+  }
+  .left-green-part-1 {
+    display: flex;
+    width: 65px;
+    height: auto;
+    background-color: #003537;
   }
   .begining-image-holder {
     width: 306px;
@@ -336,7 +346,6 @@ nav a {
   }
   .first-part {
     flex-direction: column;
-    z-index: 999999;
   }
   .logo-text-holder {
     display: flex;
@@ -349,14 +358,19 @@ nav a {
     height: 0px;
     width: 124px;
   }
+  .page-header-align {
+    padding-left: 30px;
+    padding-top: 0px;
+  }
   .meni-under-header {
     font-size: 18px;
     width: 253px;
   }
   .right-part {
-    position: absolute;
     top: 300px;
     left: 30px;
+    display: flex;
+    flex-direction: row;
   }
   .menu-left-bar {
     display: none;
@@ -500,8 +514,5 @@ nav a {
     top: 1%;
     left: 90%;
     color: #003537;
-  }
-  .content-food {
-    z-index: 1;
   }
 }
