--- a/css/meni.css
+++ b/css/meni.css
@@ -359,8 +359,7 @@ nav a {
     width: 124px;
   }
   .page-header-align {
-    padding-left: 30px;
-    padding-top: 0px;
+    padding: 0px 0px 20px 30px;
   }
   .meni-under-header {
     font-size: 18px;
