--- a/css/onama.css
+++ b/css/onama.css
@@ -44,11 +44,44 @@
   height: 400px;
   margin-left: 50px;
 }
-@media only screen and (max-width: 1500px) and (min-width: 400px) {
+.text-image-onama-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+.text-image-onama-wrapper-mobile {
+  display: none;
+}
+@media only screen and (max-width: 1500px) and (min-width: 836px) {
   .green-part-onama {
     width: 300px;
   }
   .begining-image-holder-onama {
     width: 550px;
+  }
+}
+@media only screen and (max-width: 835px) {
+  .begining-image-holder-onama {
+    width: 306px;
+    height: 209px;
+    background: url(../img/Mask_Group_413.png);
+    position: absolute;
+    top: 117px;
+    left: 33px;
+  }
+  .green-part-onama {
+    width: 65px;
+    height: 400px;
+  }
+  .text-image-onama-wrapper {
+    display: none;
+  }
+  .text-image-onama-wrapper-mobile {
+    display: flex;
+    flex-direction: column;
+  }
+  .image-next-to-text {
+    width: 300px;
+    height: 300px;
+    margin-left: 10px;
   }
 }
