--- a/css/onama.css
+++ b/css/onama.css
@@ -80,7 +80,7 @@
     flex-direction: column;
   }
   .image-next-to-text {
-    width: 300px;
+    width: 100%;
     height: 300px;
     margin-left: 10px;
   }
