--- a/css/styles.css
+++ b/css/styles.css
@@ -637,11 +637,8 @@ nav a {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #003537;
+    background-color: rgb(0, 53, 55, 90%);
     opacity: 90%;
-    -moz-opacity: 90%; /* Firefox and Mozilla browsers */
-    -webkit-opacity: 90%; /* WebKit browser e.g. Safari */
-    filter: alpha(opacity=90);
     overflow-y: hidden;
     transition: 0.5s;
   }
