--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -40,10 +40,7 @@
 .info-box {
   width: 500px;
   height: 550px;
-  background-color: #003537;
-  opacity: 80%;
-  -moz-opacity: 80%; /* Firefox and Mozilla browsers */
-  -webkit-opacity: 80%; /* WebKit browser e.g. Safari */
+  background-color: rgb(0, 53, 55, 80%);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
