--- a/css/meni.css
+++ b/css/meni.css
@@ -173,10 +173,7 @@ nav a {
   flex-direction: column;
   width: 450px;
   height: 90px;
-  background-color: #380200;
-  opacity: 84%;
-  -moz-opacity: 84%; /* Firefox and Mozilla browsers */
-  -webkit-opacity: 84%; /* WebKit browser e.g. Safari */
+  background-color: rgb(56, 2, 0, 84%);
   position: absolute;
   top: 200px;
   left: 70px;
@@ -199,10 +196,7 @@ nav a {
   flex-direction: column;
   width: 450px;
   height: 90px;
-  background-color: #003537;
-  opacity: 84%;
-  -moz-opacity: 84%; /* Firefox and Mozilla browsers */
-  -webkit-opacity: 84%; /* WebKit browser e.g. Safari */
+  background-color: rgb(0, 53, 55, 84%);
   position: absolute;
   top: 200px;
   left: 70px;
@@ -475,12 +469,7 @@ nav a {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #003537;
-    opacity: 90%;
-    -moz-opacity: 90%; /* Firefox and Mozilla browsers */
-    -webkit-opacity: 90%; /* WebKit browser e.g. Safari */
-    filter: alpha(opacity=90);
-    filter: alpha(opacity=90);
+    background-color: rgb(0, 53, 55, 90%);
     overflow-y: hidden;
     transition: 0.5s;
   }
