--- a/css/meni.css
+++ b/css/meni.css
@@ -92,6 +92,7 @@ nav a {
   line-height: 290%;
   background-color: #003537;
   height: 600px;
+  position: absolute;
 }
 .menu-left-bar a {
   text-decoration: none;
